dropshot/tests/fail/bad_server_endpoint6c.stderr
error: expected `;`, found `#`
  --> tests/fail/bad_server_endpoint6c.rs:15:17
   |
15 |     type Context
   |                 ^ help: add `;` here
16 |
17 |     #[endpoint {
   |     - unexpected token

error: expected `;`
  --> tests/fail/bad_server_endpoint6c.rs:17:5
   |
17 |     #[endpoint {
   |     ^

error[E0405]: cannot find trait `MyServer` in this scope
  --> tests/fail/bad_server_endpoint6c.rs:30:6
   |
30 | impl MyServer for MyImpl {
   |      ^^^^^^^^ not found in this scope
